--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./main.js"></script>
+    <script src="./main.mjs">
+
+    </script>
+
 </body>
 </html>
